Fix bug with recommendation icons spilling out of popular package card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,15 @@ i {
     width: 50px;
 }
 
+.recommend-container {
+    min-width: 150px;
+}
+
+.icon-recommend-popular {
+    width: 40px;
+    margin-bottom: 5px;
+}
+
 /* About section */
 .awards img {
     max-width: 95px;
@@ -312,6 +321,8 @@ i {
 .icon-recommend-package {
     width: 50px;
 }
+
+
 
 .img-resort {
     width: 100%;
